# ucode-project-template

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  compile_flags.txt  dev.mk  setup.sh
.github/workflows/: ci.yml  on_demand_build.yml
files/usr/share/ucode/: mylib.uc  openwrt_examples.uc
src/: CMakeLists.txt  mymodule.c
test/: runner.uc  testing.uc
test/unit/: mylib_test.uc  native_test.uc  openwrt_test.uc
